<resources>
    <string name="app_name">Ziko</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_for_ziko">Sign Up for ZIKO.</string>
    <string name="name">Name</string>
    <string name="sign_in">SIGN IN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="mess_authen_error">Authentication failed.</string>
    <string name="loading">Loading...</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="sign_up">sign up</string>
    <string name="add_food">Add Food</string>
    <string name="add_food_in_store">Add Food in Store.</string>
    <string name="name_food">Name Food</string>
    <string name="lets_talk">Let\'s talk about food</string>
    <string name="lets_talk_shipper">Let\'s talk about shipper</string>
    <string name="add_price">Add Price</string>
    <string name="order">Order</string>
    <string name="ok">OK</string>
    <string name="review_food">Review Food !!</string>
    <string name="add_shipper">Add Shipper</string>
    <string name="add_order_food">Add Order</string>
    <string name="review_shipper">Review Shipper</string>
    <string name="review_shipper_text">Review Shipper</string>
</resources>
