<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBgZiko"
                android:orientation="vertical"
                android:padding="@dimen/padding_ziko">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorCompo"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgFood"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        android:onClick="eventGetImage"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_image" />

                    <vn.zikoteam.ziko.customui.CustomEditText
                        android:id="@+id/editNameFood"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/name_food"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAddFood"
                        android:textSize="@dimen/text_add"
                        app:font="regular.ttf" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_addfood"
                    android:background="@color/colorCompo"
                    android:orientation="horizontal">

                    <vn.zikoteam.ziko.customui.CustomEditText
                        android:id="@+id/editAbout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="end"
                        android:gravity="top"
                        android:hint="@string/lets_talk"
                        android:inputType="textMultiLine"
                        android:maxLines="6"
                        android:minLines="4"
                        android:padding="@dimen/margin_addfood"
                        android:scrollbars="vertical"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAddFood"
                        android:textSize="@dimen/text_add"
                        app:font="regular.ttf" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_addfood"
                    android:background="@color/colorCompo"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_addfood">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_addfood"
                        android:src="@drawable/ic_dollar" />

                    <vn.zikoteam.ziko.customui.CustomEditText
                        android:id="@+id/editPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/add_price"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAddFood"
                        android:textSize="@dimen/text_add"
                        app:font="regular.ttf" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_addfood"
                    android:background="@color/colorCompo"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_addfood">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_addfood"
                        android:src="@drawable/ic_locate" />

                    <vn.zikoteam.ziko.customui.CustomEditText
                        android:id="@+id/editLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="Food Location"
                        android:inputType="textMultiLine"
                        android:maxLines="2"
                        android:minLines="2"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAddFood"
                        android:textSize="@dimen/text_add"
                        app:font="regular.ttf" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center">

            <vn.zikoteam.ziko.customui.CustomButton
                android:id="@+id/btnAddFood"
                android:layout_width="@dimen/width_login"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_addfood"
                android:background="@drawable/bg_button_primary"
                android:onClick="eventAddFood"
                android:text="@string/add_food"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"
                app:font="bold.ttf" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pgLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress"/>
</FrameLayout>